--- a/index.html
+++ b/index.html
@@ -1,1 +1,101 @@
-<h1>Eco CLUB?</h1>
+<!DOCTYPE html>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Екологичен клуб на ПМГ 'Добри Чинтулов' - Заедно за по-чиста природа">
+    <title>ПМГ "Добри Чинтулов" - Екологичен клуб</title>
+    <link rel="stylesheet" href="styles/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+    <script src="js/main.js" type="module"></script>html>
+<html lang="bg">
+
+<body>
+    <!-- Navbar -->
+    <header class="navbar">
+        <div class="navbar-brand-container">
+            <div class="navbar-brand">Еко Клуб</div>
+            <div class="navbar-brand-subtext">Организиран от ПМГ "Добри Чинтулов"</div>
+        </div>
+
+        <nav class="navbar-links">
+            <!-- Navigation items will be loaded dynamically -->
+        </nav>
+    </header>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="hero-bg"></div>
+        <div class="hero-content">
+            <h1 class="hero-title">Екологичен клуб – Да спасим природата</h1>
+            <div class="hero-buttons">
+                <a href="#about" class="button-secondary">Какво правим</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section class="about" id="about">
+        <div class="about-left">
+            <span class="section-label">КАКВО ПРАВИМ</span>
+            <h2 class="about-title">Добре дошли в нашия Еко свят!</h2>
+            <p class="about-desc">Ние сме ученици с мисия – да променим света около нас, започвайки от нашето училище.
+                Екоклубът е общност от млади хора, които вярват, че всяко действие има значение – от рециклирането на
+                отпадъци до организирането на кампании за по-чиста природа. На нашия сайт ще откриете информация за
+                нашите инициативи, бъдещи събития и как може и вие да се включите! Природата е наш общ дом – нека я
+                пазим заедно!</p>
+            <div class="about-actions">
+                <a href="#" class="button-primary">Научи повече</a>
+            </div>
+        </div>
+        <div class="about-right">
+            <div class="about-video">
+                <img src="./static/eco_video_background.png" alt="Еко видео" class="video-img">
+                <button class="play-btn">
+                    <svg xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 512 512"><path fill-rule="nonzero" d="M255.99 0c70.68 0 134.7 28.66 181.02 74.98C483.33 121.3 512 185.31 512 256c0 70.68-28.67 134.69-74.99 181.01C390.69 483.33 326.67 512 255.99 512S121.3 483.33 74.98 437.01C28.66 390.69 0 326.68 0 256c0-70.67 28.66-134.7 74.98-181.02C121.3 28.66 185.31 0 255.99 0zm77.4 269.81c13.75-8.88 13.7-18.77 0-26.63l-110.27-76.77c-11.19-7.04-22.89-2.9-22.58 11.72l.44 154.47c.96 15.86 10.02 20.21 23.37 12.87l109.04-75.66zm79.35-170.56c-40.1-40.1-95.54-64.92-156.75-64.92-61.21 0-116.63 24.82-156.74 64.92-40.1 40.11-64.92 95.54-64.92 156.75 0 61.22 24.82 116.64 64.92 156.74 40.11 40.11 95.53 64.93 156.74 64.93 61.21 0 116.65-24.82 156.75-64.93 40.11-40.1 64.93-95.52 64.93-156.74 0-61.22-24.82-116.64-64.93-156.75z"/></svg>
+                </button>
+            </div>
+        </div>
+    </section>
+
+    <!-- Events Section -->
+    <section class="events" id="events">
+        <!-- Events content will be loaded dynamically -->
+    </section>
+
+    <!-- CTA Section -->
+    <section class="cta">
+        <div class="cta-bg"></div>
+        <div class="cta-content">
+            <h2 class="cta-title">Включи се в нашата мисия!</h2>
+            <div class="cta-actions">
+                <a href="#volunteer" class="button-primary">Попълни Форма</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Next Events Section -->
+    <section class="next-events">
+        <!-- Upcoming events will be loaded dynamically -->
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-left">
+            <div class="footer-brand">largerthan<i class="footer-i">i</i></div>
+            <div class="footer-links">
+                <!-- Footer navigation items will be loaded dynamically -->
+            </div>
+        </div>
+        <div class="footer-right">
+            <h3 class="footer-subscribe-title">Subscribe to get latest updates</h3>
+            <form class="footer-form">
+                <input type="email" class="footer-input" placeholder="Your email">
+                <button type="submit" class="button-secondary">Subscribe</button>
+            </form>
+        </div>
+    </footer>
+</body>
+
+</html>
