Add about us section

--- a/about_us.html
+++ b/about_us.html
@@ -23,50 +23,39 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="hero about-hero">
-        <div class="hero-bg"></div>
-        <div class="hero-content">
-            <h1 class="hero-title">Екоклубът обединява ученици от различни класове с обща цел – опазване на околната среда и изграждане на по-зелена училищна общност</h1>
+    <section class="hero-about">
+        <div class="hero-about-left">
+            <span class="section-label">ЗА НАС</span>
+            <h2 class="hero-about-title">Екоклубът обединява ученици от различни класове с обща цел – опазване на околната среда и изграждане на по-зелена училищна общност.</h2>
+        </div>
+        <div class="hero-about-right">
+            <h3>Нашите дейности включват:</h3>
+                <ul>
+                    <li>Организиране на екологични кампании и акции</li>
+                    <li>Обучения и презентации за устойчив начин на живот</li>
+                    <li>Засаждане на растения и грижа за училищната градина</li>
+                    <li>Събиране и предаване на отпадъци за рециклиране</li>
+                </ul>
+                <p class="hero-about-desc">
+                    Вярваме, че промяната започва от малките стъпки – и ние вече ги правим!
+                </p>
         </div>
     </section>
 
-    <!-- Activities Section -->
-    <section class="activities">
-        <div class="activities-container">
-            <h2>Нашите дейности включват:</h2>
-            <div class="activities-grid">
-                <div class="activity-card">
-                    <h3>Организиране на екологични кампании и акции</h3>
-                    <p>Активно участие в местни и училищни инициативи за устойчива околна среда</p>
-                </div>
-                <div class="activity-card">
-                    <h3>Засаждане на растения</h3>
-                    <p>Създаване на зелени пространства в училищния двор</p>
-                </div>
-                <div class="activity-card">
-                    <h3>Работа по проекти</h3>
-                    <p>Разработване и участие в екологични проекти</p>
-                </div>
-                <div class="activity-card">
-                    <h3>Събиране и преработване на отпадъци</h3>
-                    <p>Организиране на кампании за рециклиране</p>
-                </div>
+        <!-- CTA Section -->
+    <section class="cta">
+        <div class="cta-bg"></div>
+        <div class="cta-content">
+            <h2 class="cta-title">Включи се в нашата мисия!</h2>
+            <div class="cta-actions">
+                <a href="#volunteer" class="button-primary">Попълни Форма</a>
             </div>
         </div>
     </section>
 
-    <!-- Mission Section -->
-    <section class="mission">
-        <div class="mission-content">
-            <p class="mission-text">
-                Ние сме ученици с мисия – да променим света около нас, започвайки от нашето училище. 
-                Вярваме, че всяко действие има значение – от рециклирането на отпадъци до организирането 
-                на кампании за по-чиста природа.
-            </p>
-            <div class="mission-actions">
-                <a href="#volunteer" class="button-primary">Присъедини се</a>
-            </div>
-        </div>
+    <!-- Next Events Section -->
+    <section class="next-events">
+    <!-- Upcoming events will be loaded dynamically -->
     </section>
 
     <!-- Footer -->
