--- a/index.html
+++ b/index.html
@@ -83,16 +83,16 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-left">
-            <div class="footer-brand">largerthan<i class="footer-i">i</i></div>
+            <div class="footer-brand">Еко Клуб</div>
             <div class="footer-links">
                 <!-- Footer navigation items will be loaded dynamically -->
             </div>
         </div>
         <div class="footer-right">
-            <h3 class="footer-subscribe-title">Subscribe to get latest updates</h3>
+            <h3 class="footer-subscribe-title">Абонирайте се за новини</h3>
             <form class="footer-form">
-                <input type="email" class="footer-input" placeholder="Your email">
-                <button type="submit" class="button-secondary">Subscribe</button>
+                <input type="email" class="footer-input" placeholder="Вашият имейл">
+                <button type="submit" class="button-secondary">Абониране</button>
             </form>
         </div>
     </footer>
