--- a/contact_us.html
+++ b/contact_us.html
@@ -50,7 +50,7 @@
                 </p>
                 <h4 class="contant-title">Адрес</h4>
                 <p class="hero-about-desc">
-                    [ИМЕ НА УЧИЛИЩЕТО], [Град, улица и №]
+                    ПМГ "Добри Чинтулов", [Град, улица и №]
                 </p>
             </div>
         </section>
